--- a/src/styles.css
+++ b/src/styles.css
@@ -17,7 +17,7 @@ app-root {
   padding: 5px;
   height: fit-content;
   width: fit-content !important;
-  z-index: 100 !important;
+  z-index: 1500 !important;
 }
 app-snackbarmsg {
   display: flex;
